# cauchy_triangulation

./: .gitignore  README.md
data/: corridor.ipynb  dinosaur.ipynb  model_house.ipynb  notre_dame.ipynb  utils.py
src/: CMakeLists.txt  TriangulationCauchyExample.cpp  paper_real_data.cpp  real_data_results.ipynb  scratch.cpp  scratch.ipynb
src/CauchyTriangulation/: CMakeLists.txt  CauchyTriangulation.cpp  CauchyTriangulation.h
src/cauchy_triangulation/: CMakeLists.txt  cauchy_triangulation.cpp  cauchy_triangulation.hpp
src/data_loader/: CMakeLists.txt  data_loader.cpp  data_loader.h
